fix: adjust min-height for expansion panel header and add section content overflow styles

--- a/src/app/core/admin/admin-entity-details/admin-entity-details/admin-entity-details.component.scss
+++ b/src/app/core/admin/admin-entity-details/admin-entity-details/admin-entity-details.component.scss
@@ -15,7 +15,7 @@
   padding: sizes.$small;
 
   .mat-expansion-panel-header {
-    min-height: auto;
+    min-height: 70px;
     align-items: center;
   }
 }
@@ -43,4 +43,9 @@
 .section-add-button {
   padding: sizes.$large;
   margin: sizes.$small;
+}
+
+.section-content {
+  overflow-x: auto;
+  overflow-y: hidden;
 }
